--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ transition: 0.5s;
 .layer{
     width:100%;
     height:0%;
-    background: linear-gradient(rgba(0,0,0,0.6),#fff);
+    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
     border-radius: 10px; 
      position: absolute;
     left: 0;
